typescript/checker/tests/conformance/parser/ecmascript5/Types/parserTypeQuery9.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            35,
        ),
        hi: BytePos(
            36,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Types/parserTypeQuery9.ts:1:15
  |
1 | var s: typeof A[];
  |               ^

